2000-03-20  Torbjorn Granlund  <tege@swox.com>

	* mpn/alpha/unicos.m4 (cvttqc): New define.
	* mpn/alpha/invert_limb.asm: Use new define for cvttqc.

2000-03-19  Kevin Ryde  <kevin@swox.se>

	* mpn/x86/k6/sqr_basecase.asm: Tiny amendments for 3x3 case.

	* gmp.texi: Use @include version.texi.
	Use @email and @uref.
	(Installing MP): Rewrite for new configure.
	(Low-level Functions): Add mpn_divexact_by3.

	* configure.in (--enable-alloca): New option.
	* acconfig.h (USE_STACK_ALLOC): For --disable-alloca.

2000-03-17  Torbjorn Granlund  <tege@swox.com>

	* gmp-impl.h (union ieee_double_extract): Check _CRAYMPP.

	* mpn/asm-defs.m4 (invert_normalized_limb): Define.

	* mpn/alpha: Translate `.s' files to `.asm'.

	* configure: Regenerate.

	* mpn/alpha/invert_limb.asm: Replace dash in file name with underscore.
	* configure.in: Corresponding change.

	* configure.in: Assign special "path" for alphaev6.

	* mpn/alpha/unicos.m4: New file.
	* configure.in (alpha*-cray-unicos*): [This part of the change commited 2000-03-13 by
	linus]
	* mpn/alpha/default.m4: New file.
	* configure.in (alpha*-*-*): Use it.

2000-03-17  Kevin Ryde  <kevin@swox.se>

	* mpn/x86/pentium/rshift.S: Use plain rcrl (not rcrl $1) for
	shift-by-1 case, significant speedup.
	* mpn/x86/pentium/README: Add shift-by-1 speed.

2000-03-16  Torbjorn Granlund  <tege@swox.com>

	* config.guess: Handle Cray T3D/E.

2000-03-15  Kevin Ryde  <kevin@swox.se>

	* mpn/generic/diveby3.c: New file.
	* mpn/x86/diveby3.asm: New file.
	* mpn/x86/k6/diveby3.asm: New file.
	* gmp.h (mpn_divexact_by3): Prototype and define.
	* mpn/asm-defs.m4: define_mpn(divexact_by3).
	* configure.in (gmp_mpn_functions): Add diveby3.

	* mpn/x86/pentium/sqr_basecase.asm: A few better addressing modes.

	* configure.in: Add AC_C_STRINGIZE and AC_CHECK_TYPES((void)).
	* gmp-impl.h (ASSERT): Use them.

	* mpn/x86/k7/mmx/lshift.asm: New file.
	* mpn/x86/k7/mmx/rshift.asm: Rewrite simple loop and return value
	handling, add some pictures.
